1.3/cert-manager-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-1
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-app-1
  type: ClusterIP
