1.3/cert-manager-test/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
  - host: my.s059223.edu.slurm.io
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: my-service-1
            port:
              number: 80
  tls:
  - hosts:
    - my.s059223.edu.slurm.io
    secretName: my-tls
